[gd_scene load_steps=27 format=3 uid="uid://q5jba1wlplcx"]

[ext_resource type="Texture2D" uid="uid://cueiw2bufrutu" path="res://sprites/gravestone_spr_0.png" id="1_16odb"]
[ext_resource type="Script" path="res://scenes/Tomb.gd" id="1_onnxa"]
[ext_resource type="Texture2D" uid="uid://bhubq2fubf5me" path="res://sprites/gravestone_spr_1.png" id="2_a0p5i"]
[ext_resource type="Texture2D" uid="uid://bh2oel655m4f3" path="res://sprites/gravestone_spr_3.png" id="4_wmt0x"]
[ext_resource type="Texture2D" uid="uid://dy7n6ejvjptba" path="res://sprites/gravestone_spr_4.png" id="5_4gq4g"]
[ext_resource type="Shader" path="res://scenes/Item.gdshader" id="6_dniun"]
[ext_resource type="Texture2D" uid="uid://cmahogbn2aqwr" path="res://sprites/bomb.png" id="7_8cckg"]
[ext_resource type="Texture2D" uid="uid://dbh84l3hbge3s" path="res://sprites/box.png" id="8_udsty"]
[ext_resource type="Texture2D" uid="uid://byvh241kbwlen" path="res://sprites/coin.png" id="9_xlkwx"]
[ext_resource type="Texture2D" uid="uid://dxbkc1lh5f3bx" path="res://sprites/invisibility.png" id="10_ljxx5"]
[ext_resource type="Texture2D" uid="uid://di4olx4un0owh" path="res://sprites/rock.png" id="11_ftxux"]
[ext_resource type="Texture2D" uid="uid://munfls4yrggx" path="res://sprites/growing_plant.png" id="12_2oy25"]
[ext_resource type="Texture2D" uid="uid://d0ggyyulssgq5" path="res://sprites/radar.png" id="13_xlhu5"]
[ext_resource type="Texture2D" uid="uid://c23s3u7g3bdtm" path="res://sprites/simul_box.png" id="14_17744"]
[ext_resource type="Texture2D" uid="uid://c7v26dk2ya7hd" path="res://sprites/smoke_bomb.png" id="15_tyk71"]
[ext_resource type="Texture2D" uid="uid://de1vyj25jt0t3" path="res://sprites/spring.png" id="16_novat"]
[ext_resource type="Texture2D" uid="uid://d3m4w8m7o2x0f" path="res://sprites/teleporter_box.png" id="17_87skl"]
[ext_resource type="FontFile" uid="uid://cqp5o2vpb07yg" path="res://fonts/prstartk.ttf" id="18_lmm28"]
[ext_resource type="Texture2D" uid="uid://vfqtds30qekn" path="res://sprites/question_mark.png" id="18_ne0n8"]
[ext_resource type="Texture2D" uid="uid://da14xud8tdoj" path="res://sprites/arrows1.png" id="19_xl1wy"]
[ext_resource type="Texture2D" uid="uid://b74uo51q2y58i" path="res://sprites/arrows2.png" id="20_vjs6a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_evds0"]
size = Vector2(31, 10)

[sub_resource type="SpriteFrames" id="SpriteFrames_f8jax"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_16odb")
}, {
"duration": 1.0,
"texture": ExtResource("2_a0p5i")
}, {
"duration": 1.0,
"texture": ExtResource("4_wmt0x")
}, {
"duration": 1.0,
"texture": ExtResource("5_4gq4g")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5125a"]
resource_local_to_scene = true
shader = ExtResource("6_dniun")
shader_parameter/shine_color = Color(1, 1, 1, 1)
shader_parameter/shine_speed = 3.0
shader_parameter/shine_size = 0.01
shader_parameter/white = null

[sub_resource type="SpriteFrames" id="SpriteFrames_o1tye"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_8cckg")
}],
"loop": true,
"name": &"bomb",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_udsty")
}],
"loop": true,
"name": &"clone",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_xlkwx")
}],
"loop": true,
"name": &"coin",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_ljxx5")
}],
"loop": true,
"name": &"invisibility",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_ftxux")
}],
"loop": true,
"name": &"muffin",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_2oy25")
}],
"loop": true,
"name": &"plant",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_xlhu5")
}],
"loop": true,
"name": &"radar",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_17744")
}],
"loop": true,
"name": &"simul",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_tyk71")
}],
"loop": true,
"name": &"smoke",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_novat")
}],
"loop": true,
"name": &"spring",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_87skl")
}],
"loop": true,
"name": &"teleport",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_ne0n8")
}],
"loop": true,
"name": &"unknown",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_fbffi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_xl1wy")
}, {
"duration": 1.0,
"texture": ExtResource("20_vjs6a")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Tomb" type="Area2D"]
script = ExtResource("1_onnxa")

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, -5)
shape = SubResource("RectangleShape2D_evds0")

[node name="sprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_f8jax")
offset = Vector2(0, -11)

[node name="display" type="Node2D" parent="."]
position = Vector2(0, -87)

[node name="back2" type="ColorRect" parent="display"]
z_index = 4096
offset_left = -303.0
offset_top = -32.0
offset_right = 247.0
offset_bottom = 47.0
metadata/_edit_use_anchors_ = true

[node name="back" type="ColorRect" parent="display"]
z_index = 4096
offset_left = -302.0
offset_top = -31.0
offset_right = 246.0
offset_bottom = 46.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="sprite" type="AnimatedSprite2D" parent="display/back"]
material = SubResource("ShaderMaterial_5125a")
position = Vector2(45, 61)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_o1tye")
animation = &"unknown"
offset = Vector2(0, -16)

[node name="lbl_item" type="Label" parent="display/back"]
layout_mode = 0
offset_left = 84.0
offset_top = 2.0
offset_right = 508.0
offset_bottom = 64.0
theme_override_fonts/font = ExtResource("18_lmm28")
text = "==GRAVESTONE==
EXAMINE?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="arrows" type="AnimatedSprite2D" parent="display/back"]
position = Vector2(520, 39)
sprite_frames = SubResource("SpriteFrames_fbffi")
autoplay = "default"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
